sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:16: error: not found: value valj
    valj = getValue(j);
    ^AlgSelectionSort:17: error: not found: value valj
    if(valj < vali)
       ^AlgSelectionSort:18: error: not found: value valj
      vali = valj;
             ^