sort.basic.selection.AlgSelectionSort.scala.code

def selectionSort() {
  var len = getValueCount();
  for(i <- 0 to len-1){
    var ind = select(i,len);
    swap(ind, i);
    
  }
}

def select(i:Int, len:Int) : Int = {
  var indMini = i;
  var vali =  getValue(i);
  for(j <- i to len-1){
    valj = getValue(j);
    if(valj < vali)
    	vali = valj;
    	indMini = j;
  }
  return indMini;
  
}